# rust-lpc1347

./: Cargo.toml  LICENSE-MIT  LPC13Uxx_patched.svd  README.md  device.x  dupes.pl  rustfmt.toml
src/: lib.rs
src/adc/: mod.rs
src/adc/cr/: mod.rs
src/adc/dr/: mod.rs
src/adc/gdr/: mod.rs
src/adc/inten/: mod.rs
src/adc/stat/: mod.rs
src/adc/trm/: mod.rs
src/ct16b0/: mod.rs
src/ct16b0/ccr/: mod.rs
src/ct16b0/cr0/: mod.rs
src/ct16b0/cr1/: mod.rs
src/ct16b0/ctcr/: mod.rs
src/ct16b0/emr/: mod.rs
src/ct16b0/mr/: mod.rs
src/ct16b0/pwmc/: mod.rs
src/ct16b1/: mod.rs
src/ct16b1/ccr/: mod.rs
src/ct16b1/ctcr/: mod.rs
src/ct16b1/ir/: mod.rs
src/ct16b1/pc/: mod.rs
src/ct16b1/pr/: mod.rs
src/ct16b1/tc/: mod.rs
src/ct32b0/: mod.rs
src/ct32b0/ccr/: mod.rs
src/ct32b0/cr1/: mod.rs
src/ct32b0/ctcr/: mod.rs
src/ct32b0/emr/: mod.rs
src/ct32b0/ir/: mod.rs
src/ct32b0/mcr/: mod.rs
src/ct32b0/tc/: mod.rs
src/ct32b1/: mod.rs
src/ct32b1/ccr/: mod.rs
src/ct32b1/cr0/: mod.rs
src/ct32b1/ctcr/: mod.rs
src/ct32b1/emr/: mod.rs
src/ct32b1/mr/: mod.rs
src/ct32b1/pc/: mod.rs
src/ct32b1/pr/: mod.rs
src/ct32b1/pwmc/: mod.rs
src/ct32b1/tcr/: mod.rs
src/flashctrl/: mod.rs
src/flashctrl/eemssig/: mod.rs
src/flashctrl/eemsstart/: mod.rs
src/flashctrl/eemsstop/: mod.rs
src/flashctrl/flashcfg/: mod.rs
src/flashctrl/fmsstart/: mod.rs
src/flashctrl/fmsstop/: mod.rs
src/flashctrl/fmstat/: mod.rs
src/flashctrl/fmsw0/: mod.rs
src/gpio_port/: mod.rs
src/iocon/: mod.rs
src/ritimer/: mod.rs
src/syscon/: mod.rs
(+179 files in other folders)
