[package]
name = "lpc1347"
version = "0.1.4"
authors = ["Axel Sundbom <axel-sundbom@hotmail.com>"]
description = "Peripheral access for the nxp lpc1347"

[dependencies]
cortex-m = "0.4.0"
bare-metal = "0.1.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.3.9"

[features]
rt = ["cortex-m-rt"]
